--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tanstack/react-query": "^4.20.4",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
