--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@tanstack/react-query": "^4.20.4",
     "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "express": "^4.18.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
